--- a/Red Sandalwood .html
+++ b/Red Sandalwood .html
@@ -12,7 +12,7 @@
             <h1>Endangered Earth</h1>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#species">Endangered Species</a></li>
                 </ul>
@@ -23,16 +23,16 @@
     <div class="content">
             <img src="./Images/assets/Red Sandalwood.jpg" alt="Red Sandalwood Tree">
             <h2>Introduction</h2>
-            <p>Red Sandalwood, scientifically known as <em>Pterocarpus santalinus</em>, is a rare and highly valuable tree native to the Southern parts of India. This species is known for its distinctive red heartwood, which is used in making fine furniture, traditional medicines, cosmetics, and dyes.</p>
+            <p><strong>Red Sandalwood</strong>, scientifically known as <strong>Pterocarpus santalinus</strong>, is a rare and highly valuable tree native to the Southern parts of India. This species is known for its distinctive red heartwood, which is used in making fine furniture, traditional medicines, cosmetics, and dyes.</p>
 
             <h2>Uses and Importance</h2>
             <p>Historically, Red Sandalwood has been prized for its deep red wood, which is used for making luxury items such as musical instruments, decorative objects, and religious artifacts. Additionally, it holds significance in Ayurveda for its medicinal properties, which are believed to aid in treating digestive issues, fever, and skin diseases.</p>
 
             <h2>Habitat</h2>
-            <p>The Red Sandalwood tree is primarily found in the dry, deciduous forests of Southern India, particularly in the Eastern Ghats. It thrives in rocky, infertile soil, which adds to the difficulty of cultivation. Deforestation and illegal logging have put this species under severe pressure.</p>
+            <p> Red Sandalwood tree is primarily found in the dry, deciduous forests of Southern India, particularly in the Eastern Ghats. It thrives in rocky, infertile soil, which adds to the difficulty of cultivation. Deforestation and illegal logging have put this species under severe pressure.</p>
 
             <h2>Conservation Status</h2>
-            <p>Red Sandalwood is classified as <strong>Endangered</strong> by the International Union for Conservation of Nature (IUCN). Overexploitation due to high demand for its valuable timber has led to a drastic decline in its population. Conservation efforts are underway, with restrictions on logging and export, as well as reforestation programs aimed at restoring its natural habitat.</p>
+            <p>Red Sandalwood is classified as Endangered by the <strong>International Union for Conservation of Nature (IUCN)</strong>. Overexploitation due to high demand for its valuable timber has led to a drastic decline in its population. Conservation efforts are underway, with restrictions on logging and export, as well as reforestation programs aimed at restoring its natural habitat.</p>
         </div>
     </div>
 
