--- a/Snow Leopard.html
+++ b/Snow Leopard.html
@@ -12,7 +12,7 @@
             <h1>Endangered Earth</h1>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#species">Endangered Species</a></li>
                 </ul>
@@ -22,6 +22,7 @@
 
     <div class="content">
         <img src="./Images/assets/Snow Leopard.jpg" alt="Snow Leopard">
+        
         <h2>Snow Leopard (Panthera uncia)</h2>
         <p>
             The Snow Leopard is a large cat native to the mountain ranges of Central and South Asia. Known for its beautiful, thick fur and elusive nature, the snow leopard is considered one of the most elusive big cats in the world. It is listed as "Vulnerable" on the IUCN Red List due to habitat loss and poaching.
