--- a/black rhino.html
+++ b/black rhino.html
@@ -12,9 +12,8 @@
             <h1>Endangered Earth</h1>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="#species">Endangered Species</a></li>
+                    <li><a href="index.html">Home</a></li>
+
                 </ul>
             </nav>
         </header>
