--- a/giant panda.html
+++ b/giant panda.html
@@ -12,7 +12,7 @@
             <h1>Endangered Earth</h1>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#species">Endangered Species</a></li>
                 </ul>
@@ -20,7 +20,7 @@
         </header>
     </section>
 <div class="content">
-    <img src="./Images/assets/Giant Panda.jpg" alt="Giant Panda">
+    <img src="./Images/assets/collage of giant panda.webp" alt="Giant Panda" height="500">
     <h2>Giant Panda (Ailuropoda melanoleuca)</h2>
     <p>
         The giant panda, known for its distinctive black-and-white fur, is one of the world's most beloved animals. Native to the mountain ranges of central China, they are primarily found in Sichuan, Shaanxi, and Gansu provinces.
