--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#species">Endangered Species</a></li>
+                    <li><a href="endangered.html">Endangered Species</a></li>
                 </ul>
             </nav>
         </header>
@@ -23,7 +23,7 @@
         <section id="home" class="hero">
             <div class="hero-content">
                 
-                <h2 style="color: rgb(102, 33, 33);">Help Save Our Planet's Most Vulnerable Species</h2>
+                <h2 style="color: rgb(250, 255, 255);">Help Save Our Planet's Most Vulnerable Species</h2>
                 <p>Together, we can protect endangered species and their habitats.</p>
             </div>
         </section>
@@ -39,18 +39,25 @@
                     <div class="species-card">
                         <a href="./bengaltiger.html"> <img src="./Images/assets/tiger.png" alt="Bengal Tiger"></a>
                         <h3>Bengal Tiger</h3>
+                        <p>
+                            The Bengal tiger, a majestic and powerful predator, is one of the most iconic species on Earth.
+                        </p>
                         <p>Population: Less than 2,500</p>
                         <p>Habitat: India, Bangladesh, Nepal, Bhutan</p>
                     </div>
                     <div class="species-card">
                         <a href="./black rhino.html"><img src="./Images/assets/rhino.jpeg" alt="Black Rhino"></a>
                         <h3>Black Rhino</h3>
+                        <p>The Black Rhino is critically endangered, known for its two horns on the skull and a hooked upper lip.</p>
                         <p>Population: Around 5,000</p>
                         <p>Habitat: Southern and Eastern Africa</p>
                     </div>
                     <div class="species-card">
                         <a href="./giant panda.html"><img src="./Images/assets/panda.jpeg" alt="Giant Panda"></a>
                         <h3>Giant Panda</h3>
+                        <p>
+                            The giant panda, known for its distinctive black-and-white fur, is one of the world's most beloved animals.
+                        </p>
                         <p>Population: Around 1,864</p>
                         <p>Habitat: Central China</p>
                     </div>
@@ -96,7 +103,7 @@
                         </p>
                     </div>
                 </div>
-            </section>
+</section>
         </section>
 
 
