--- a/Arizona Agave.html
+++ b/Arizona Agave.html
@@ -12,7 +12,7 @@
             <h1>Endangered Earth</h1>
             <nav>
                 <ul>
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#species">Endangered Species</a></li>
                 </ul>
