--- a/Adiantum Vivesii.html
+++ b/Adiantum Vivesii.html
@@ -14,13 +14,12 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#species">Endangered Species</a></li>
                 </ul>
             </nav>
         </header>
     </section>
     <div class="content">
-        <img src="./Images/assets/Adiantum Vivesii Fern 2.jpg" alt="Adiantum Vivesii Fern">
+        <img src="./Images/assets/Adiantum Vivesii Fern 2.jpg" height="400px" alt="Adiantum Vivesii Fern">
         <h2>Introduction</h2>
         <p><em>Adiantum Vivesii</em> is a critically endangered fern species found in only a few parts of the world. This rare fern belongs to the maidenhair fern family and is highly valued for its delicate, fan-shaped fronds and fine stems. Due to its limited habitat and specific environmental needs, the plant faces many threats, making its conservation a high priority.</p>
 
