--- a/Ebony Tree.html
+++ b/Ebony Tree.html
@@ -14,13 +14,12 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#species">Endangered Species</a></li>
                 </ul>
             </nav>
         </header>
     </section>
     <div class="content">
-        <img src="./Images/assets/Ebony 2.webp" alt="Ebony Tree">
+        <img src="./Images/assets/Ebony 2.webp" height="400px"  alt="Ebony Tree">
         <h2>Introduction</h2>
         <p>The Ebony Tree, scientifically known as <em>Diospyros ebenum</em>, is renowned for its dark, dense wood that has been prized for centuries. The black, rich timber from the Ebony Tree is used in making fine furniture, musical instruments, and intricate carvings, making it one of the most sought-after hardwood species in the world.</p>
 
