--- a/Malabar Mahogany.html
+++ b/Malabar Mahogany.html
@@ -14,13 +14,12 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#species">Endangered Species</a></li>
                 </ul>
             </nav>
         </header>
     </section>
     <div class="content">
-        <img src="./Images/assets/Malabar Mahogany 2.webp" alt="Malabar Mahogany Tree">
+        <img src="./Images/assets/Malabar Mahogany 2.webp" height="400px" alt="Malabar Mahogany Tree">
         <h2>Introduction</h2>
         <p>Malabar Mahogany, scientifically known as <em>Swietenia mahagoni</em>, is a valuable hardwood species native to the Western Ghats of India. It is known for its fine-grained wood, which is prized in the furniture industry for its durability, attractive appearance, and resistance to pests.</p>
 
