--- a/Musli .html
+++ b/Musli .html
@@ -14,13 +14,12 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#species">Endangered Species</a></li>
                 </ul>
             </nav>
         </header>
     </section>
     <div class="content">
-        <img src="./Images/assets/Musli 2.webp" alt="Musli Plant">
+        <img src="./Images/assets/Musli 2.webp" height="400px" alt="Musli Plant">
         <h2>Introduction</h2>
         <p>Musli, scientifically known as <em>Chlorophytum borivilianum</em>, is a herbaceous plant used extensively in Ayurvedic, Unani, and traditional Indian medicine. It is valued for its medicinal roots, which are used as an aphrodisiac, rejuvenator, and tonic for strengthening the immune system.</p>
 
