--- a/Red Sandalwood .html
+++ b/Red Sandalwood .html
@@ -14,14 +14,13 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#species">Endangered Species</a></li>
                 </ul>
             </nav>
         </header>
     </section>
 
     <div class="content">
-            <img src="./Images/assets/Red Sandalwood.jpg" alt="Red Sandalwood Tree">
+            <img src="./Images/assets/Red Sandalwood.jpg" height="400px"  alt="Red Sandalwood Tree">
             <h2>Introduction</h2>
             <p><strong>Red Sandalwood</strong>, scientifically known as <strong>Pterocarpus santalinus</strong>, is a rare and highly valuable tree native to the Southern parts of India. This species is known for its distinctive red heartwood, which is used in making fine furniture, traditional medicines, cosmetics, and dyes.</p>
 
